Frankbelford/uatv1ba/force-app/main/default/objects/Endorsement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Endorsements</relationshipLabel>
    <relationshipName>Endorsements</relationshipName>
    <type>Lookup</type>
</CustomField>