Frankbelford/uatv1ba/force-app/main/default/objects/Endorsement__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Endorsements</relationshipLabel>
    <relationshipName>Endorsements</relationshipName>
    <type>Lookup</type>
</CustomField>