Frankbelford/uatv1ba/force-app/main/default/objects/Endorsement__c/fields/Composite_Id__c.field-meta.xml
<CustomField>
    <fullName>Composite_Id__c</fullName>
    <formula>CASESAFEID(Job_Category__c) + CASESAFEID(Candidate__c) + CASESAFEID(Site__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Composite Id</label>
    <type>Text</type>
</CustomField>