Frankbelford/uatv1ba/force-app/main/default/objects/Endorsement__c/fields/Endorsed_By__c.field-meta.xml
<CustomField>
    <fullName>Endorsed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Endorsed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Endorsements</relationshipName>
    <type>Lookup</type>
</CustomField>