Frankbelford/uatv1ba/force-app/main/default/objects/Endorsement__c/fields/Endorsement_Date__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Date__c</fullName>
    <label>Endorsement Date</label>
    <type>Date</type>
</CustomField>