Frankbelford/uatv1ba/force-app/main/default/objects/Endorsement__c/fields/EndorsementID__c.field-meta.xml
<CustomField>
    <fullName>EndorsementID__c</fullName>
    <formula>Site__r.Id&amp;Job_Category__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EndorsementID</label>
    <type>Text</type>
</CustomField>