Frankbelford/uatv1ba/force-app/main/default/objects/Endorsement__c/fields/Job_Category__c.field-meta.xml
<CustomField>
    <fullName>Job_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Category</label>
    <referenceTo>sirenum__Job_Type__c</referenceTo>
    <relationshipLabel>Endorsements</relationshipLabel>
    <relationshipName>Endorsements</relationshipName>
    <type>Lookup</type>
</CustomField>